--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-reqwest = { version = "0.11", features = ["blocking"] }
-html2md = "0.2"
+# reqwest = { version = "0.11", features = ["blocking"] }
+# html2md = "0.2"
+actix-web = "4"
