--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2021"
 [dependencies]
 # reqwest = { version = "0.11", features = ["blocking"] }
 # html2md = "0.2"
-actix-web = "4"
+# actix-web = "4"
