--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 # reqwest = { version = "0.11", features = ["blocking"] }
 # html2md = "0.2"
 # actix-web = "4"
-regex = { version = "1.11.1"}
+# rand ={ version = "0.9.0-alpha.2"}
+common = {path = "./common"}
