--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-reqwest = "0.12.9"
-html2md = "0.2.14"
+# reqwest = "0.12.9"
+# html2md = "0.2.14"
+rand = { version = "*"}
