--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2021"
 [dependencies]
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
+reqwest = "0.12.12"
+thiserror = "2"
+anyhow = "1"
